--- a/taixinkanghu/src/main/res/layout/activity_order_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_order_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
@@ -10,23 +10,23 @@
     <!--<android.support.v4.widget.SwipeRefreshLayout-->
     <LinearLayout
         android:id="@id/swipeRefreshLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1.0">
 
         <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingBottom="10.0dip"
                 android:paddingTop="10.0dip">
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10.0dip"
                     android:orientation="horizontal"
@@ -54,7 +54,7 @@
 
                 <TextView
                     android:id="@+id/statusDes"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center"
@@ -64,7 +64,7 @@
                     android:textSize="16.0sp" />
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10.0dip"
                     android:layout_marginTop="15.0dip"
@@ -91,7 +91,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -144,7 +144,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -170,7 +170,7 @@
 
                 <LinearLayout
                     android:id="@id/item_worker"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="80.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -222,7 +222,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="fill_parent"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
@@ -244,7 +244,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="fill_parent"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
@@ -268,7 +268,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10.0dip"
                     android:layout_marginTop="15.0dip"
@@ -287,7 +287,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -313,7 +313,7 @@
 
                 <LinearLayout
                     android:id="@id/item_holiday_add"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -353,7 +353,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="50.0dip"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -378,7 +378,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10.0dip"
                     android:layout_marginTop="15.0dip"
@@ -397,7 +397,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
                     android:orientation="vertical"
@@ -406,7 +406,7 @@
 
                     <LinearLayout
                         android:id="@id/history5"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingBottom="10.0dip"
@@ -439,7 +439,7 @@
 
                     <LinearLayout
                         android:id="@id/history4"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingBottom="10.0dip"
@@ -472,7 +472,7 @@
 
                     <LinearLayout
                         android:id="@id/history3"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingBottom="10.0dip"
@@ -505,7 +505,7 @@
 
                     <LinearLayout
                         android:id="@id/history2"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingBottom="10.0dip"
@@ -537,7 +537,7 @@
 
                     <LinearLayout
                         android:id="@id/history1"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingBottom="10.0dip"
@@ -573,7 +573,7 @@
 
     <LinearLayout
         android:id="@id/btn_bar"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
