--- a/taixinkanghu/src/main/res/layout/activity_about_us.xml
+++ b/taixinkanghu/src/main/res/layout/activity_about_us.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
 
     <ScrollView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -36,7 +36,7 @@
 
             <LinearLayout
                 android:id="@id/item1"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -63,7 +63,7 @@
 
             <LinearLayout
                 android:id="@id/item2"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -90,7 +90,7 @@
 
             <LinearLayout
                 android:id="@id/item3"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -116,7 +116,7 @@
 
             <LinearLayout
                 android:id="@id/item4"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
