--- a/taixinkanghu/src/main/res/layout/activity_agreement.xml
+++ b/taixinkanghu/src/main/res/layout/activity_agreement.xml
@@ -7,24 +7,24 @@
     <include layout="@layout/include_header" />
 
     <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dip"
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dip"
                 android:text="尊敬的用户：" />
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dip"
                 android:layout_marginRight="20dip"
@@ -33,7 +33,7 @@
         </LinearLayout>
 
         <Button
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="48.0dip"
             android:layout_gravity="bottom"
             android:background="@drawable/btn_main"
