--- a/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
+++ b/taixinkanghu/src/main/res/layout/activity_choose_worker.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/title"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.taixinkanghu.app.ui.activity.ChooseWorkerActivity">
 
     <LinearLayout
@@ -42,7 +42,7 @@
 
         <FrameLayout
             android:id="@+id/buttionline01"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fff">
 
@@ -77,7 +77,7 @@
 
                 <FrameLayout
                     android:id="@+id/buttionline02"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#fff">
 
@@ -106,7 +106,7 @@
 
                         <!--<android.support.v7.widget.RecyclerView-->
                         <!--android:id="@+id/recyclerview"-->
-                        <!--android:layout_width="fill_parent"-->
+                        <!--android:layout_width="match_parent"-->
                         <!--android:layout_height="match_parent"/>-->
 
                         <include layout="@layout/item_worker_list" />
@@ -136,7 +136,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:orientation="vertical">
