--- a/taixinkanghu/src/main/res/layout/activity_my_set.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_set.xml
@@ -8,14 +8,14 @@
 
     <LinearLayout
         android:id="@id/item_phone"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="10.0dip"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="54.0dip"
             android:layout_marginTop="10.0dip"
             android:background="@drawable/bg_order_btn"
@@ -24,7 +24,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
