--- a/taixinkanghu/src/main/res/layout/activity_order_confirm.xml
+++ b/taixinkanghu/src/main/res/layout/activity_order_confirm.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/main_bg_color"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1.0">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="10.0dip">
@@ -30,7 +30,7 @@
                 android:textSize="14.0sp" />
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -58,7 +58,7 @@
 
             <LinearLayout
                 android:id="@id/item_date"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -95,7 +95,7 @@
 
             <LinearLayout
                 android:id="@id/item_patient"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -123,7 +123,7 @@
 
             <LinearLayout
                 android:id="@id/item_place"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -151,7 +151,7 @@
 
             <LinearLayout
                 android:id="@id/item_remark"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -179,7 +179,7 @@
 
             <LinearLayout
                 android:id="@id/item_worker"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -188,7 +188,7 @@
                 android:paddingTop="10.0dip">
 
                 <TextView
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10.0dip"
                     android:layout_weight="1.0"
@@ -209,7 +209,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="0.0"
                     android:gravity="right|center"
                     android:orientation="vertical">
@@ -254,7 +254,7 @@
                 android:textSize="14.0sp" />
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -283,7 +283,7 @@
 
             <LinearLayout
                 android:id="@id/item_holiday_add"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -325,7 +325,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -350,7 +350,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -377,7 +377,7 @@
 
             <LinearLayout
                 android:id="@id/item_wallet"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dip"
                 android:layout_marginTop="10.0dip"
                 android:background="@drawable/bg_order_btn"
@@ -403,12 +403,12 @@
 
             <LinearLayout
                 android:id="@id/pay_view"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10.0dip"
                     android:gravity="center_vertical"
@@ -438,7 +438,7 @@
 
                 <LinearLayout
                     android:id="@id/item_cash"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -485,7 +485,7 @@
 
                 <LinearLayout
                     android:id="@id/item_alipay"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -532,7 +532,7 @@
 
                 <LinearLayout
                     android:id="@id/item_weixin"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
                     android:gravity="center_vertical"
@@ -581,7 +581,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10.0dip"
                 android:gravity="center_vertical"
@@ -610,7 +610,7 @@
 
             <LinearLayout
                 android:id="@id/item_cash"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -646,7 +646,7 @@
 
     <Button
         android:id="@id/btn_pay"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="48.0dip"
         android:background="@drawable/bg_btn_main_color"
         android:text="确认支付"
