--- a/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
+++ b/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="44.0dip"
             android:layout_marginLeft="30dip"
             android:gravity="center_vertical"
@@ -22,7 +22,7 @@
 
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="54.0dip"
             android:background="@drawable/bg_order_btn"
             android:orientation="horizontal">
@@ -44,7 +44,7 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="44.0dip"
             android:layout_marginLeft="30dip"
             android:gravity="center_vertical"
@@ -53,11 +53,11 @@
 
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="66.0dip"
                 android:background="@drawable/bg_order_btn"
                 android:gravity="center_vertical"
@@ -69,7 +69,7 @@
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="48.0dip"
         android:background="#20000000"
         android:orientation="horizontal">
