--- a/taixinkanghu/src/main/res/layout/activity_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_reviews.xml
@@ -8,7 +8,7 @@
 
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0.5dip"
         android:background="#40000000" />
 
@@ -387,7 +387,7 @@
 
     <!--<android.support.v7.widget.RecyclerView-->
     <!--android:id="@+id/recyclerview"-->
-    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"-->
     <!--android:background="#0f0"-->
     <!--android:layout_weight="1.0">-->
