--- a/taixinkanghu/src/main/res/layout/activity_sale_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_sale_info.xml
@@ -8,14 +8,14 @@
     <include layout="@layout/include_header"/>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <ImageView
             android:id="@id/img_info"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="240dip"
             android:background="@mipmap/img_company">
 
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/info_title"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="35dip"
             android:gravity="center_vertical"
             android:text="  促销信息展示文字。"
@@ -36,7 +36,7 @@
 
             <TextView
                 android:id="@+id/info_text_red"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="30dip"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
