--- a/taixinkanghu/src/main/res/layout/activity_service_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_service_info.xml
@@ -5,8 +5,8 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="right|center_vertical"
         android:background="@mipmap/img_guide1"></android.support.v4.view.ViewPager>
 
@@ -19,7 +19,7 @@
 
     <LinearLayout
         android:id="@+id/ll"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
