--- a/taixinkanghu/src/main/res/layout/activity_welcome.xml
+++ b/taixinkanghu/src/main/res/layout/activity_welcome.xml
@@ -1,13 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="xiexie.lreanviewpagerdemo.welCome">
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@mipmap/img_welcome"/>
 
 </LinearLayout>
