--- a/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,15 +10,15 @@
         android:background="#00000000"></LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1.0"
         android:orientation="horizontal">
 
         <ListView
             android:id="@id/mainListView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="2.0"
             android:background="#ffffffff"
             android:choiceMode="singleChoice"
@@ -29,13 +29,13 @@
 
         <View
             android:layout_width="0.100000024dip"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:background="@color/divider_color" />
 
         <ListView
             android:id="@id/subListView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:background="#ffffffff"
             android:divider="@color/divider_color"
@@ -44,13 +44,13 @@
     </LinearLayout>
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0.5dip"
         android:background="@color/divider_color" />
 
     <Button
         android:id="@id/reset"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="40.0dip"
         android:layout_weight="0.0"
         android:background="@drawable/bg_btn_white"
