--- a/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,7 +12,7 @@
 
     <ListView
         android:id="@+id/listView_sort"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffffff"
         android:choiceMode="singleChoice"
@@ -22,13 +22,13 @@
         android:scrollbars="none" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0.5dip"
         android:background="@color/divider_color" />
 
     <View
         android:id="@id/bg"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#70000000" />
 </LinearLayout>
