--- a/taixinkanghu/src/main/res/layout/fragment_select_the_way.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_the_way.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="100dp">
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/find"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="48.0dip"
         android:background="@drawable/bg_order_btn"
         android:gravity="center"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/recommend"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="48.0dip"
         android:layout_marginTop="-0.5dip"
         android:background="@drawable/bg_order_btn"
