--- a/taixinkanghu/src/main/res/layout/fragment_selsct_city.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_selsct_city.xml
@@ -6,25 +6,25 @@
     tools:context="com.taixinkanghu.app.ui.activity.SelectCity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="93dip"
         android:background="#00000000"
         android:orientation="vertical" />
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffffff">
 
         <LinearLayout
             android:id="@id/content"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffffff"
                 android:gravity="center_vertical"
@@ -51,13 +51,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fff"
         android:orientation="horizontal">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="15.0dip"
@@ -66,7 +66,7 @@
 
             <Button
                 android:id="@id/item1"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5.0dip"
                 android:layout_marginRight="5.0dip"
@@ -82,7 +82,7 @@
 
             <Button
                 android:id="@id/item2"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5.0dip"
                 android:layout_marginRight="5.0dip"
@@ -98,7 +98,7 @@
 
             <Button
                 android:id="@id/item3"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5.0dip"
                 android:layout_marginRight="5.0dip"
@@ -113,7 +113,7 @@
 
             <Button
                 android:id="@id/item4"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5.0dip"
                 android:layout_marginRight="5.0dip"
@@ -131,14 +131,14 @@
     </LinearLayout>
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0.5dip"
         android:background="@color/divider_color" />
 
     <View
         android:id="@+id/bg"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#70000000" />
 
 </LinearLayout>
