--- a/taixinkanghu/src/main/res/layout/item_main_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_main_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/linearLayout1"
     android:orientation="vertical">
@@ -14,7 +14,7 @@
         android:layout_gravity="center_horizontal"/>
 
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/main_color"
         android:id="@+id/ib_line"/>
