--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
 
         <item name="android:layout_width">0.0dip</item>
 
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_height">match_parent</item>
 
         <item name="android:button">@null</item>
 
